Modified Prompt format

--- a/LoRAFineTune.ipynb
+++ b/LoRAFineTune.ipynb
@@ -23,6 +23,7 @@
     "from transformers import AutoModelForCausalLM,AutoTokenizer\n",
     "import torch\n",
     "import os\n",
+    "device=\"cuda\"\n",
     "model_id=\"TinyLlama/TinyLlama-1.1B-Chat-v1.0\"\n",
     "model = AutoModelForCausalLM.from_pretrained(model_id, torch_dtype=torch.float16, load_in_8bit=False,device_map=\"auto\",trust_remote_code=True)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
@@ -34,21 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b904a5ca-47de-43eb-8596-fd58223e3848",
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import GenerationConfig\n",
+    "from format_and_split import format_inference_prompt\n",
     "from time import perf_counter\n",
-    "def formatted_prompt(question)-> str:\n",
-    "    return f\"<|user|>\\n{question}</s>\\n<|assistant|>\"\n",
     "def generate_response(user_input): \n",
     "    prompt = user_input\n",
     "    inputs = tokenizer([prompt], return_tensors=\"pt\")\n",
     "    generation_config = GenerationConfig(penalty_alpha=0.6,do_sample = True,top_k=5,temperature=0.5,repetition_penalty=1.2,max_new_tokens=120,pad_token_id=tokenizer.eos_token_id)\n",
     "    start_time = perf_counter()\n",
-    "    inputs = tokenizer(prompt, return_tensors=\"pt\").to('cuda')\n",
+    "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
     "    outputs = model.generate(**inputs, generation_config=generation_config)\n",
     "    response=tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
     "    output_time = perf_counter() - start_time\n",
@@ -68,40 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b8f86f6e-bd99-42a7-a4e1-680d3d61da3c",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-05-18 12:19:28.261971: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-05-18 12:19:28.289636: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX512_FP16 AVX_VNNI AMX_TILE AMX_INT8 AMX_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-05-18 12:19:28.860523: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time taken for inference: 3.34 seconds\n",
-      "Lora FineTune :\n",
-      "<|user|>\n",
-      "Light yellow color \n",
-      "<|assistant|>\n",
-      "#ffe08e => A light, bright shade of yellow with a touch of orange, similar to the hue found in freshly picked oranges and sunflowers. It's very vibrant yet not too intense, making it suitable for use as a primary color or accent.\n",
-      "\n",
-      "This color is reminiscent of a warm summer day, with just enough pop from the hint of orange to make it stand out. It has an inviting quality that makes it feel both cheerful and comforting at once. The combination of yellow and orange creates\n"
+     "ename": "NameError",
+     "evalue": "name 'user_input' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# lora with format \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLora FineTune :\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mgenerate_response(format_inference_prompt(user_input))\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'user_input' is not defined"
      ]
     }
    ],
    "source": [
     "# lora with format \n",
-    "print(f\"Lora FineTune :\\n{generate_response(formatted_prompt(user_input))}\")"
+    "print(f\"Lora FineTune :\\n{generate_response(format_inference_prompt(user_input))}\")"
    ]
   },
   {
